--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
 	font-family: Public Sans;
     background: hsl(193, 100, 96%);
 }
+/* The .header is the header style */
 ._header{
     height: 80px;
     margin-bottom: -20px;
@@ -13,6 +14,7 @@ body{
 	font-family: Public Sans;
 	background: hsl(193, 100%, 96%);
 }
+/* ._bot-1 is the Try For Free button in the header */
 ._bot-1{
     float: right;
     margin-right: 50px;
@@ -21,7 +23,9 @@ body{
     padding-top: 5px;
     padding-left: 35px;
     padding-right: 35px;
+    background: white;
 }
+/*  */
 ._p-1{
     margin-bottom: 5px;
     margin-top: 5px;
@@ -30,17 +34,19 @@ body{
 .container{
     padding: 20px;
 }
+/* The below is the parent container for the flexbox */
 .container_card{
     margin-left: -20px;
     margin-right: -20px;
     display: flex;
     justify-content: space-between;
-    border: 3px solid blue;
+    border: hsl(193, 100%, 96%);;
     padding: 20px 40px 40px;
     max-width: 8000px;
     max-height: 500px;
     background-color: hsl(193, 100%, 96%);
 }
+/* This is text child to parent .container_card */
 .container_text{
     display: inline-block;
     width: 1000px;
@@ -49,6 +55,7 @@ body{
     bottom: 0px;
     top: 50px;
 }
+/* The image child to parent .container_card */
 .container_img{
     display: inline-block;
     vertical-align: top;
@@ -58,7 +65,6 @@ body{
 }
 .img-2{
     width: 100%;
-
 }
 ._bot-2{
     border-radius: 20px;
@@ -78,7 +84,7 @@ body{
     margin-right: -40px;
     display: flex;
     justify-content: space-between;
-    border: 3px solid green;
+    border: hsl(193, 100%, 96%);
     padding: 20px 40px 40px;
     max-width: 10000px;
     max-height: 365px;
@@ -116,7 +122,7 @@ body{
     margin-right: -40px;
     display: flex;
     justify-content: space-between;
-    border: 3px solid red;
+    border: hsl(193, 100%, 96%);
     padding: 20px 40px 40px;
     max-width: 10000px;
     max-height: 400px;
@@ -188,6 +194,55 @@ body{
 }
 .img-5{
     
+}
+.container-4{
+    padding: 60px;
+}
+/* The below is the parent container for the flexbox */
+.container_card-4{
+    margin-top: -60px;
+    margin-left: 240px;
+    margin-right: 10px;
+    display: flex;
+    justify-content: space-between;
+    border: 3px solid blue;
+    padding: 20px 40px 80px;
+    max-width: 600px;
+    max-height: 60px;
+    background-color: hsl(193, 100%, 96%);
+}
+/* This is text child to parent .container_card */
+.container_text-4{
+    display: inline-block;
+    width: 800px;
+    position: relative;
+    vertical-align: top;
+    bottom: 0px;
+    top: 40px;
+    margin-right: -750px;
+    margin-top: -30px;
+    padding-left: 100px;
+}
+/* The image child to parent .container_card */
+.container_bot-2{
+    display: inline-block;
+    vertical-align: bottom;
+    width: 80%;
+    margin-right: -25px;
+    margin-top: 40px;
+    margin-bottom: -70px;
+    padding-bottom: 20px;
+    padding-top: 30px;
+    /* margin: 20px 30px 0 0; */
+}
+._bot-3{
+    border-radius: 30px;
+    padding-bottom: 13px;
+    padding-top: 13px;
+    padding-left: 55px;
+    padding-right: 55px;
+    color: white;
+    background-color: hsl(322, 100%, 66%);
 }
 /* h1._p1-h1{ 
     position: relative;
